Fix journal.html & journal-detail.html, update main.css, add footer

--- a/journal-detail.html
+++ b/journal-detail.html
@@ -98,5 +98,32 @@
 
         </div>
       </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+      <div id="footer-items">
+        <div class="footer-items-logo">
+          <img src="img/olderbrother-icon.png" alt="">
+        </div>
+          <div class="footer-items-nave">
+            <nav>
+              <a href="shop.html" class="main_nav_item">Shop</a>
+              <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
+              <a href="process.html" class="main_nav_item">Process</a>
+              <a href="journal.html" class="main_nav_item"><span class="current_link">Journal</span></a>
+            </nav>
+          </div>
+        <div class="footer-items-form">
+          <h4>FOLLOW US</h4>
+          <label for="input-name" class="text-label"></label>
+          <input type="text" id="input-name" value="Email Address">
+          <a href="#" class="myButton">Submit</a>
+        </div>
+      </div>
+      <div class="footers-copyright">
+        <p>COPYRIGHT @ IAT339 TEAM 16</p>
+      </div>
+    </footer>
   </body>
 </html>
