--- a/journal.html
+++ b/journal.html
@@ -6,7 +6,7 @@
     <title class="page_title">Olderbrother | Journal</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
-    <link rel="stylesheet" type="text/css" href="css/grids.css" />
+    <link rel="stylesheet" type="text/css" href="css/grids.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
@@ -21,7 +21,7 @@
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="process.html" class="main_nav_item">Process</a>
+            <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item"><span class="current_link">Journal</span></a>
           </nav>
         </div>
@@ -34,7 +34,7 @@
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="process.html" class="main_nav_item">Process</a>
+            <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
           </nav>
         </div>
@@ -49,135 +49,140 @@
             <div class="items-text">
               <a href="#"><h1>JOURNAL</h1></a>
 
-              <img src="img/02.jpg" alt="this is a journal image">
+              <img src="img/imagery01.jpg" alt="this is a journal image">
             </div>
           </div>
+
           <section id="journal">
           <div class="main_journal">
             <div class="box">
               <div class="box-image">
                 <div class="image-link-container">
-                  <a href="journal-detail.html"><img src="img/look-vest-black-indigo.png" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
+                  <a href="journal_detail.html"><img src="img/look-vest-black-indigo.png" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
                   <div class="img-hover-box">
                     <div class="img-hover-text">
-                      <a href="journal-detail.html">Olderbrother Featured in Bon Appétit</a>
+                      <a href="journal_detail.html">Presenting Spring/Summer 2019</a>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="box-text">
 
-                <h5>By Amiel Stanek</h5>
-                <h5>Photos by Alex Lau</h5>
+                <h5>Amiel Stanek</h5>
+                <h4 class="article-date">Nov 30, 2016</h4>
               </div>
             </div>
               <div class="box">
                 <div class="box-image">
                   <div class="image-link-container">
-                    <a href="journal-detail.html"><img src="img/blazer-dark-indigo.png" class="img-link" alt="Connecting the Dots"></a>
+                    <a href="journal_detail.html"><img src="img/imagery03.jpg" class="img-link" alt="Connecting the Dots"></a>
                     <div class="img-hover-box">
                       <div class="img-hover-text">
-                        <a href="journal-detail.html">Connecting the Dots</a>
+                        <a href="journal_detail.html">Connecting the Dots</a>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="box-text">
                   <h5>Amanda Ringstad</h5>
-                  <h5>Nov 30, 2016</h5>
+                  <h4 class="article-date">Nov 30, 2016</h4>
                 </div>
               </div>
               <div class="box">
                 <div class="box-image">
                   <div class="image-link-container">
-                    <a href="journal-detail.html"><img src="img/imagery06.jpg" class="img-link" alt="The Gallos - Morning Routine"></a>
+                    <a href="journal_detail.html"><img src="img/imagery06.jpg" class="img-link" alt="The Gallos - Morning Routine"></a>
                     <div class="img-hover-box">
-                      <div class="img-hover-text"><a href="journal-detail.html">
+                      <div class="img-hover-text"><a href="journal_detail.html">
                       The Gallos - Morning Routine</a></div>
                     </div>
                   </div>
                 </div>
                 <div class="box-text">
                   <h5>@carissajg & @andrewgallo</h5>
-                  <h5>May 02, 2017</h5>
+                  <h4 class="article-date">May 02, 2017</h4>
                 </div>
               </div>
             </div>
+
             <div class="main_journal">
               <div class="box">
                 <div class="box-image">
                   <div class="image-link-container">
-                    <a href="journal-detail.html"><img src="img/03.jpg" class="img-link" alt="Connecting the Dots"></a>
+                    <a href="journal_detail.html"><img src="img/imagery05.jpg" class="img-link" alt="Connecting the Dots"></a>
                     <div class="img-hover-box">
                       <div class="img-hover-text">
-                        <a href="journal-detail.html">Connecting the Dots</a>
+                        <a href="journal_detail.html">Connecting the Dots</a>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="box-text">
                   <h5>Amanda Ringstad</h5>
-                  <h5>Nov 30, 2016</h5>
+                  <h4 class="article-date">Nov 30, 2016</h4>
                 </div>
               </div>
               <div class="box">
                 <div class="box-image">
                   <div class="image-link-container">
-                    <a href="journal-detail.html"><img src="img/imagery04.jpg" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
+                    <a href="journal_detail.html"><img src="img/imagery04.jpg" class="img-link" alt="White spoon holding dried saffron and golden-coloured fabric in the background."></a>
                     <div class="img-hover-box">
                       <div class="img-hover-text">
-                        <a href="journal-detail.html">Olderbrother Featured in Bon Appétit</a>
+                        <a href="journal_detail.html">Olderbrother Featured in Bon Appétit</a>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="box-text">
-                  <h5>By Amiel Stanek</h5>
-                  <h5>Photos by Alex Lau</h5>
+                  <h5>Amiel Stanek</h5>
+                  <h4 class="article-date">Nov 30, 2016</h4>
                 </div>
               </div>
               <div class="box">
                 <div class="box-image">
                   <div class="image-link-container">
-                    <a href="journal-detail.html"><img src="img/06.jpg" class="img-link" alt="Connecting the Dots"></a>
+                    <a href="journal_detail.html"><img src="img/06.jpg" class="img-link" alt="Connecting the Dots"></a>
                     <div class="img-hover-box">
                       <div class="img-hover-text">
-                        <a href="journal-detail.html">Connecting the Dots</a>
+                        <a href="journal_detail.html">Connecting the Dots</a>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="box-text">
                   <h5>Amanda Ringstad</h5>
-                  <h5>Nov 30, 2016</h5>
+                  <h4 class="article-date">Nov 30, 2016</h4>
                 </div>
               </div>
       </section>
   </div>
 
+  <!-- footer -->
+
   <footer>
-    <div id="footer-items">
+    <div id="footer_items">
       <div class="footer-items-logo">
         <img src="img/olderbrother-icon.png" alt="">
       </div>
-        <div class="footer-items-nave">
+        <div class="footer-items-nav">
           <nav>
-            <a href="shop.html" class="main_nav_item">Shop</a>
-            <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="process.html" class="main_nav_item">Process</a>
-            <a href="journal.html" class="main_nav_item"><span class="current_link">Journal</span></a>
+            <a href="#" class="main_nav_item">Account</a>
+            <a href="#" class="main_nav_item">FAQs</a>
+            <a href="checkout_cart.html" class="main_nav_item">Cart</a>
+            <a href="style_guide.html" class="main_nav_item">Style Guide</a>
           </nav>
         </div>
       <div class="footer-items-form">
-        <h4>FOLLOW US</h4>
+        <h4>Subscribe to our newsletter</h4>
         <label for="input-name" class="text-label"></label>
         <input type="text" id="input-name" value="Email Address">
-        <a href="#" class="myButton">Submit</a>
+        <a href="#" class="primary-btn">Submit</a>
       </div>
     </div>
-    <div class="footers-copyright">
+    <div class="footer-copyright">
       <p>COPYRIGHT @ IAT339 TEAM 16</p>
     </div>
   </footer>
+
   </body>
 </html>
