--- a/product_detail.html
+++ b/product_detail.html
@@ -6,7 +6,7 @@
     <title class="page_title">Olderbrother | Product Name</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
-    <link rel="stylesheet" type="text/css" href="css/grids.css" />
+    <link rel="stylesheet" type="text/css" href="css/grids.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
@@ -24,7 +24,7 @@
             </a>
             <a href="shop.html" class="main_nav_item"><span class="current_link">Shop</span></a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="process.html" class="main_nav_item">Process</a>
+            <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
           </nav>
         </div>
@@ -37,7 +37,7 @@
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="process.html" class="main_nav_item">Process</a>
+            <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
           </nav>
         </div>
@@ -100,10 +100,10 @@
       <section id="featured_products">
 
         <h3 class="featured-title">You May Also Like</h3>
-        
+
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-rugby-shirt-natural-sky-indigo.png" alt="Lookbook - Rugby Shirt">
               <img class="hover-img" src="img/rugby-shirt-natural-sky-indigo.png" alt="Rugby Shirt - Sky Indigo">
             </a>
@@ -117,7 +117,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-geri-pants-sky-indigo.png" alt="Lookbook - Geri Pants">
               <img class="hover-img" src="img/geri-pants-sky-indigo.png" alt="Geri Pants - Sky Indigo">
             </a>
@@ -131,7 +131,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-hoodie-tie-dye-sky-indigo.png" alt="Lookbook - Hoodie">
               <img class="hover-img" src="img/hoodie-tie-dye-sky-indigo.png" alt="Hoodie - Tie Dye Sky Indigo">
             </a>
@@ -145,7 +145,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-ob-tee-tie-dye-saffron.png" alt="Lookbook - OB Tee">
               <img class="hover-img" src="img/ob-tee-tie-dye-saffron.png" alt="OB Tee - Tie Dye Saffron">
             </a>
@@ -160,6 +160,108 @@
       </section>
 
     </div>
+
+    <section id="ratings_reviews">
+      <div id="write_review">
+        <div class="block">
+          <h3 class="reviews-heading">Write a Review</h3>
+          <br>
+          <div class="account_email">
+            <label for="email" class="text-label">Email Address</label>
+            <input type="text" id="email" class="input-box">
+          </div><br>
+
+          <div class="account_pass">
+            <label for="password" class="text-label">Password</label>
+            <input type="text" id="password" class="input-box">
+          </div>
+
+          <h5 class="intext-link"><a href="#">Forgot your password?</a></h5>
+
+          <div class="sign_up_btns">
+            <a href="#" class="secondary-btn">Sign Up</a>
+            <a href="#" class="primary-btn">Sign In</a>
+          </div>
+
+        </div>
+      </div>
+
+      <div id="other_reviews">
+        <div class="block">
+          <h3 class="reviews_heading">Other Reviews</h3>
+
+          <div class="written-review">
+            <h4 class="review-date">26/09/2019</h4>
+            <div class="stars">
+              <span>★</span>
+              <span>★</span>
+              <span>★</span>
+              <span>★</span>
+              <span>★</span>
+            </div>
+            <h3 class="review-title">A summer piece that I will be adding to my fall wardrobe</h3>
+            <p class="review-text">Super soft and and comfortable and a fun spin on a classic crewneck.</p>
+            <h4 class="review-name">By Kelly P</h4>
+          </div>
+
+          <div class="written-review seperator-line">
+            <h4 class="review-date">26/09/2019</h4>
+            <div class="stars">
+              <span>★</span>
+              <span>★</span>
+              <span>★</span>
+              <span>★</span>
+              <span>★</span>
+            </div>
+            <h3 class="review-title">My new favourite crewneck</h3>
+            <p class="review-text">A summer staple on cooler nights and the sky indigo colour is magical!</p>
+            <h4 class="review-name">By Madison C</h4>
+          </div>
+
+          <div class="written-review seperator-line">
+            <h4 class="review-date">26/09/2019</h4>
+            <div class="stars">
+              <span>★</span>
+              <span>★</span>
+              <span>★</span>
+              <span>★</span>
+              <span>★</span>
+            </div>
+            <h3 class="review-title">Love the simplicity and sustainability of this fashion brand</h3>
+            <p class="review-text">I've already turned so many of my friends onto Olderbrother clothing.</p>
+            <h4 class="review-name">By Skyler L</h4>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <!-- footer -->
+
+    <footer>
+      <div id="footer_items">
+        <div class="footer-items-logo">
+          <img src="img/olderbrother-icon.png" alt="">
+        </div>
+          <div class="footer-items-nav">
+            <nav>
+              <a href="#" class="main_nav_item">Account</a>
+              <a href="#" class="main_nav_item">FAQs</a>
+              <a href="checkout_cart.html" class="main_nav_item">Cart</a>
+              <a href="style_guide.html" class="main_nav_item">Style Guide</a>
+            </nav>
+          </div>
+        <div class="footer-items-form">
+          <h4>Subscribe to our newsletter</h4>
+          <label for="input-name" class="text-label"></label>
+          <input type="text" id="input-name" value="Email Address">
+          <a href="#" class="primary-btn">Submit</a>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <p>COPYRIGHT @ IAT339 TEAM 16</p>
+      </div>
+    </footer>
 
   </body>
 </html>
