--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title class="page_title">Olderbrother | Products</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
-    <link rel="stylesheet" type="text/css" href="css/grids.css" />
+    <link rel="stylesheet" type="text/css" href="css/grids.css">
     <link rel="stylesheet" href="css/iconfont.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -24,7 +24,7 @@
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="process.html" class="main_nav_item"><span class="current_link">Process</span></a>
+            <a href="about.html" class="main_nav_item"><span class="current_link">About</span></a>
             <a href="journal.html" class="main_nav_item">Journal</a>
           </nav>
         </div>
@@ -37,7 +37,7 @@
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="process.html" class="main_nav_item">Process</a>
+            <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
           </nav>
         </div>
@@ -47,7 +47,7 @@
    <div class="content_container">
       <section id="about">
         <div class="about-header">
-          <h3>WHO WE ARE</h3>
+          <h3>Who We Are</h3>
           <div class="seperator-line"></div>
         </div>
         <div id="about-detail">
@@ -99,13 +99,13 @@
                   <span class="iconfont"><a href="https://twitter.com/intent/tweet?source=&text=:%20" target="_blank" title="Tweet">&#xe84c;</a></span>
                 </li>
                 <li class="icon">
-                  <span class="iconfont"><a href="https://www.instagram.com/" target="_blank" title="Tweet">&#xe6fc;</a></span>
+                  <span class="iconfont"><a href="https://www.instagram.com/olderbrother" target="_blank" title="Tweet">&#xe6fc;</a></span>
                 </li>
                 <li class="icon">
                   <span class="iconfont"><a href="http://pinterest.com/pin/create/button/?url=&description=" target="_blank" title="Pin it">&#xe7a8;</a></span>
                 </li>
                 <li class="icon">
-                  <span class="iconfont"><a href="https://www.facebook.com/sharer/sharer.php?u=&quote=" title="Share on Facebook" target="_blank">&#xe64e;</a></span>
+                  <span class="iconfont"><a href="https://www.facebook.com/olderbrother" title="Share on Facebook" target="_blank">&#xe64e;</a></span>
                 </li>
               </ul>
             </div>
@@ -117,36 +117,33 @@
           </div>
       </section>
     </div>
-    <section id="footer">
-      <!-- This is footer section -->
-      <footer>
-        <div id="footer-items">
-          <div class="footer-items-logo">
-            <img src="img/olderbrother-icon.png" alt="">
-          </div>
-            <div class="footer-items-nave">
-              <nav>
-                <a href="shop.html" class="main_nav_item">Shop</a>
-                <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-                <a href="process.html" class="main_nav_item">Process</a>
-                <a href="journal.html" class="main_nav_item"><span class="current_link">Journal</span></a>
-              </nav>
-            </div>
-          <div class="footer-items-form">
-            <h4>FOLLOW US</h4>
-            <label for="input-name" class="text-label"></label>
-            <input type="text" id="input-name" value="Email Address">
-            <a href="#" class="myButton">Submit</a>
-          </div>
+
+    <!-- footer -->
+
+    <footer>
+      <div id="footer_items">
+        <div class="footer-items-logo">
+          <img src="img/olderbrother-icon.png" alt="">
         </div>
-        <div class="footers-copyright">
-          <p>COPYRIGHT @ IAT339 TEAM 16</p>
+          <div class="footer-items-nav">
+            <nav>
+              <a href="#" class="main_nav_item">Account</a>
+              <a href="#" class="main_nav_item">FAQs</a>
+              <a href="checkout_cart.html" class="main_nav_item">Cart</a>
+              <a href="style_guide.html" class="main_nav_item">Style Guide</a>
+            </nav>
+          </div>
+        <div class="footer-items-form">
+          <h4>Subscribe to our newsletter</h4>
+          <label for="input-name" class="text-label"></label>
+          <input type="text" id="input-name" value="Email Address">
+          <a href="#" class="primary-btn">Submit</a>
         </div>
-      </footer>
-
-
-
-    </section>
+      </div>
+      <div class="footer-copyright">
+        <p>COPYRIGHT @ IAT339 TEAM 16</p>
+      </div>
+    </footer>
 
   </body>
 </html>
