--- a/checkout_cart.html
+++ b/checkout_cart.html
@@ -6,7 +6,7 @@
     <title class="page_title">Olderbrother | Home</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
-    <link rel="stylesheet" type="text/css" href="css/grids.css" />
+    <link rel="stylesheet" type="text/css" href="css/grids.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
@@ -24,7 +24,7 @@
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="process.html" class="main_nav_item">Process</a>
+            <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
           </nav>
         </div>
@@ -37,7 +37,7 @@
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="process.html" class="main_nav_item">Process</a>
+            <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
           </nav>
         </div>
@@ -132,6 +132,33 @@
       </section>
 
     </div>
+
+    <!-- footer -->
+
+    <footer>
+      <div id="footer_items">
+        <div class="footer-items-logo">
+          <img src="img/olderbrother-icon.png" alt="">
+        </div>
+          <div class="footer-items-nav">
+            <nav>
+              <a href="#" class="main_nav_item">Account</a>
+              <a href="#" class="main_nav_item">FAQs</a>
+              <a href="checkout_cart.html" class="main_nav_item">Cart</a>
+              <a href="style_guide.html" class="main_nav_item">Style Guide</a>
+            </nav>
+          </div>
+        <div class="footer-items-form">
+          <h4>Subscribe to our newsletter</h4>
+          <label for="input-name" class="text-label"></label>
+          <input type="text" id="input-name" value="Email Address">
+          <a href="#" class="primary-btn">Submit</a>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <p>COPYRIGHT @ IAT339 TEAM 16</p>
+      </div>
+    </footer>
 
   </body>
 </html>
