--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <title class="page_title">Olderbrother | Home</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
-    <link rel="stylesheet" type="text/css" href="css/grids.css" />
+    <link rel="stylesheet" type="text/css" href="css/grids.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
@@ -24,7 +24,7 @@
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="process.html" class="main_nav_item">Process</a>
+            <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
           </nav>
         </div>
@@ -37,7 +37,7 @@
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="process.html" class="main_nav_item">Process</a>
+            <a href="about.html" class="main_nav_item">about</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
           </nav>
         </div>
@@ -66,7 +66,7 @@
 
             <div class="block">
               <div class="image-link">
-                <a href="product_template.html">
+                <a href="product_detail.html">
                   <img src="img/look-raglan-crew_tie-dye-sky-indigo.png" alt="Lookbook - Raglan Crew">
                   <img class="hover-img" src="img/raglan-crew_tie-dye-sky-indigo.png" alt="Raglan Crew - Tie Dye Sky Indigo">
                 </a>
@@ -80,7 +80,7 @@
 
             <div class="block">
               <div class="image-link">
-                <a href="product_template.html">
+                <a href="product_detail.html">
                   <img src="img/look-hoodie-sky-indigo.png" alt="Lookbook - Hoodie">
                   <img class="hover-img" src="img/hoodie-sky-indigo.png" alt="Hoodie - Sky Indigo">
                 </a>
@@ -94,7 +94,7 @@
 
             <div class="block">
               <div class="image-link">
-                <a href="product_template.html">
+                <a href="product_detail.html">
                   <img src="img/look-leisure-shirt-white.png" alt="Lookbook - Leisure Shirt">
                   <img class="hover-img" src="img/leisure-shirt-white.png" alt="Vest - Black Indigo">
                 </a>
@@ -108,7 +108,7 @@
 
             <div class="block">
               <div class="image-link">
-                <a href="product_template.html">
+                <a href="product_detail.html">
                   <img src="img/look-blazer-dark-indigo.png" alt="Lookbook - Blazer">
                   <img class="hover-img" src="img/blazer-dark-indigo.png" alt="Blazer - Dark Indigo">
                 </a>
@@ -127,7 +127,7 @@
         <section id="brand_description">
           <h4>About Us</h4>
           <h2>Olderbrother is a playful, eco-sustainable, naturally dyed, gender-neutral contemporary collection from Portland for the slow fashion revolution.</h2>
-          <a href="process.html" class="secondary-btn">Learn More</a>
+          <a href="about.html" class="secondary-btn">Learn More</a>
         </section>
 
       </section>
@@ -135,26 +135,26 @@
       <!-- footer -->
 
       <footer>
-        <div id="footer-items">
+        <div id="footer_items">
           <div class="footer-items-logo">
             <img src="img/olderbrother-icon.png" alt="">
           </div>
-            <div class="footer-items-nave">
+            <div class="footer-items-nav">
               <nav>
-                <a href="shop.html" class="main_nav_item">Shop</a>
-                <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-                <a href="process.html" class="main_nav_item">Process</a>
-                <a href="journal.html" class="main_nav_item"><span class="current_link">Journal</span></a>
+                <a href="#" class="main_nav_item">Account</a>
+                <a href="#" class="main_nav_item">FAQs</a>
+                <a href="checkout_cart.html" class="main_nav_item">Cart</a>
+                <a href="style_guide.html" class="main_nav_item">Style Guide</a>
               </nav>
             </div>
           <div class="footer-items-form">
-            <h4>FOLLOW US</h4>
+            <h4>Subscribe to our newsletter</h4>
             <label for="input-name" class="text-label"></label>
             <input type="text" id="input-name" value="Email Address">
-            <a href="#" class="myButton">Submit</a>
+            <a href="#" class="primary-btn">Submit</a>
           </div>
         </div>
-        <div class="footers-copyright">
+        <div class="footer-copyright">
           <p>COPYRIGHT @ IAT339 TEAM 16</p>
         </div>
       </footer>
