--- a/journal_detail.html
+++ b/journal_detail.html
@@ -5,8 +5,7 @@
     <title>Olderbrother Featured in Bon Appétit</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
-    <link rel="stylesheet" type="text/css" href="css/grids.css" />
-    <link rel="stylesheet" type="text/css" href="css/journal.css" />
+    <link rel="stylesheet" type="text/css" href="css/grids.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
@@ -21,7 +20,7 @@
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="process.html" class="main_nav_item">Process</a>
+            <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item"><span class="current_link">Journal</span></a>
           </nav>
         </div>
@@ -34,7 +33,7 @@
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="process.html" class="main_nav_item">Process</a>
+            <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
           </nav>
         </div>
@@ -100,30 +99,32 @@
       </div>
     </div>
 
-    <!-- Footer -->
+    <!-- footer -->
+
     <footer>
-      <div id="footer-items">
+      <div id="footer_items">
         <div class="footer-items-logo">
           <img src="img/olderbrother-icon.png" alt="">
         </div>
-          <div class="footer-items-nave">
+          <div class="footer-items-nav">
             <nav>
-              <a href="shop.html" class="main_nav_item">Shop</a>
-              <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-              <a href="process.html" class="main_nav_item">Process</a>
-              <a href="journal.html" class="main_nav_item"><span class="current_link">Journal</span></a>
+              <a href="#" class="main_nav_item">Account</a>
+              <a href="#" class="main_nav_item">FAQs</a>
+              <a href="checkout_cart.html" class="main_nav_item">Cart</a>
+              <a href="style_guide.html" class="main_nav_item">Style Guide</a>
             </nav>
           </div>
         <div class="footer-items-form">
-          <h4>FOLLOW US</h4>
+          <h4>Subscribe to our newsletter</h4>
           <label for="input-name" class="text-label"></label>
           <input type="text" id="input-name" value="Email Address">
-          <a href="#" class="myButton">Submit</a>
+          <a href="#" class="primary-btn">Submit</a>
         </div>
       </div>
-      <div class="footers-copyright">
+      <div class="footer-copyright">
         <p>COPYRIGHT @ IAT339 TEAM 16</p>
       </div>
     </footer>
+
   </body>
 </html>
