--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
     <title class="page_title">Olderbrother | Shop</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
-    <link rel="stylesheet" type="text/css" href="css/grids.css" />
+    <link rel="stylesheet" type="text/css" href="css/grids.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
@@ -24,7 +24,7 @@
             </a>
             <a href="shop.html" class="main_nav_item"><span class="current_link">Shop</span></a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="process.html" class="main_nav_item">Process</a>
+            <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
           </nav>
         </div>
@@ -37,7 +37,7 @@
             </a>
             <a href="shop.html" class="main_nav_item">Shop</a>
             <a href="#lookbooks" class="main_nav_item">Lookbooks</a>
-            <a href="process.html" class="main_nav_item">Process</a>
+            <a href="about.html" class="main_nav_item">About</a>
             <a href="journal.html" class="main_nav_item">Journal</a>
           </nav>
         </div>
@@ -87,7 +87,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-classic-shirt-white.png" alt="Lookbook - Classic Shirt">
               <img class="hover-img" src="img/classic-shirt-white.png" alt="Classic Shirt - White">
             </a>
@@ -101,7 +101,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-vest-black-indigo.png" alt="Lookbook - Vest">
               <img class="hover-img" src="img/vest-black-indigo.png" alt="Vest - Black Indigo">
             </a>
@@ -115,7 +115,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-jeans-sky-indigo.png" alt="Lookbook - Jeans">
               <img class="hover-img" src="img/jeans-sky-indigo.png" alt="Jeans - Sky Indigo">
             </a>
@@ -129,7 +129,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-hoodie-sky-indigo.png" alt="Lookbook - Hoodie">
               <img class="hover-img" src="img/hoodie-sky-indigo.png" alt="Hoodie - Sky Indigo">
             </a>
@@ -143,7 +143,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-rugby-shirt-saffron-sky-dark-indigo.png" alt="Lookbook - Rugby Shirt">
               <img class="hover-img" src="img/rugby-shirt-saffron-sky-dark-indigo.png" alt="Rugby Shirt - Saffron/Sky Indigo/Dark Indigo">
             </a>
@@ -157,7 +157,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-blazer-dark-indigo.png" alt="Lookbook - Blazer">
               <img class="hover-img" src="img/blazer-dark-indigo.png" alt="Blazer - Dark Indigo">
             </a>
@@ -171,7 +171,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-raglan-crew_tie-dye-sky-indigo.png" alt="Lookbook - Raglan Crew">
               <img class="hover-img" src="img/raglan-crew_tie-dye-sky-indigo.png" alt="Raglan Crew - Tie Dye Sky Indigo">
             </a>
@@ -185,7 +185,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-blazer-white.png" alt="Lookbook - Blazer">
               <img class="hover-img" src="img/blazer-white.png" alt="Blazer - White">
             </a>
@@ -199,7 +199,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-leisure-shirt-white.png" alt="Lookbook - Leisure Shirt">
               <img class="hover-img" src="img/leisure-shirt-white.png" alt="Leisure Shirt - White">
             </a>
@@ -213,7 +213,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-tank-top-sky-indigo.png" alt="Lookbook - Tank Top">
               <img class="hover-img" src="img/tank-top-sky-indigo.png" alt="Tank Top - Sky Indigo">
             </a>
@@ -227,7 +227,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-leisure-shirt-saffron.png" alt="Lookbook - Leisure Shirt">
               <img class="hover-img" src="img/leisure-shirt-saffron.png" alt="Leisure Shirt - Saffron">
             </a>
@@ -241,7 +241,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-rugby-shirt-natural-sky-indigo.png" alt="Lookbook - Rugby Shirt">
               <img class="hover-img" src="img/rugby-shirt-natural-sky-indigo.png" alt="Rugby Shirt - Sky Indigo">
             </a>
@@ -255,7 +255,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-geri-pants-sky-indigo.png" alt="Lookbook - Geri Pants">
               <img class="hover-img" src="img/geri-pants-sky-indigo.png" alt="Geri Pants - Sky Indigo">
             </a>
@@ -269,7 +269,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-hoodie-tie-dye-sky-indigo.png" alt="Lookbook - Hoodie">
               <img class="hover-img" src="img/hoodie-tie-dye-sky-indigo.png" alt="Hoodie - Tie Dye Sky Indigo">
             </a>
@@ -283,7 +283,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-ob-tee-tie-dye-saffron.png" alt="Lookbook - OB Tee">
               <img class="hover-img" src="img/ob-tee-tie-dye-saffron.png" alt="OB Tee - Tie Dye Saffron">
             </a>
@@ -297,7 +297,7 @@
 
         <div class="block">
           <div class="image-link">
-            <a href="product_template.html">
+            <a href="product_detail.html">
               <img src="img/look-vest-natural.png" alt="Lookbook - Vest">
               <img class="hover-img" src="img/vest-natural.png" alt="Vest - Natural">
             </a>
@@ -312,6 +312,33 @@
       </section>
 
     </div>
+
+    <!-- footer -->
+
+    <footer>
+      <div id="footer_items">
+        <div class="footer-items-logo">
+          <img src="img/olderbrother-icon.png" alt="">
+        </div>
+          <div class="footer-items-nav">
+            <nav>
+              <a href="#" class="main_nav_item">Account</a>
+              <a href="#" class="main_nav_item">FAQs</a>
+              <a href="checkout_cart.html" class="main_nav_item">Cart</a>
+              <a href="style_guide.html" class="main_nav_item">Style Guide</a>
+            </nav>
+          </div>
+        <div class="footer-items-form">
+          <h4>Subscribe to our newsletter</h4>
+          <label for="input-name" class="text-label"></label>
+          <input type="text" id="input-name" value="Email Address">
+          <a href="#" class="primary-btn">Submit</a>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <p>COPYRIGHT @ IAT339 TEAM 16</p>
+      </div>
+    </footer>
 
   </body>
 </html>
