Fix main.css and google map of about.html

--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
           </div>
           <div id="about-detail">
             <div id="map">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d41615.30073357206!2d-123.10540439436018!3d49.31511130959098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54867046f9232b41%3A0x6f85cb4bd4fbec5a!2z5LiN5YiX6aKg5ZOl5Lym5q-U5Lqa55yB5YyX5rip5ZOl5Y2O!5e0!3m2!1szh-CN!2sca!4v1571203630573!5m2!1szh-CN!2sca" frameborder="0"allowfullscreen=""></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3307.749597994455!2d-118.47426568502367!3d33.9989649806205!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bb678da51095%3A0xf0069676db35c8ab!2sOlderbrother!5e0!3m2!1sen!2sca!4v1571360668286!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
             </div>
           </div>
       </section>
