Add more responsive in about, journal, and journal_detail page

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
       </div>
     </header>
-   <div class="content_container">
+  <div class="content_container">
       <section id="about">
         <div class="about-header">
           <h3>Who We Are</h3>
@@ -68,7 +68,7 @@
         <div id="about-detail">
           <table>
             <tr>
-              <td>
+              <td class="about-table">
                 <img src="img/BOBBY BONAPARTE.jpg" alt="Founders">
                 <h4>Bobby Bonaparte</h4>
                 <span class="iconfont"><a href="https://twitter.com/intent/tweet?source=&text=:%20" target="_blank" title="Tweet">&#xe84c;</a></span>
@@ -117,6 +117,7 @@
           </div>
       </section>
     </div>
+
 
     <!-- footer -->
 
