--- a/journal_detail.html
+++ b/journal_detail.html
@@ -42,7 +42,7 @@
     </header>
 
 
-    <!-- journal article -->
+     <!-- journal article -->
     <div id="article">
       <div class="">
         <div class="article-image">
@@ -89,7 +89,7 @@
       </div>
 
       <div class="article-image-items">
-        <div class="article-image">
+        <div class="article-image" id="author">
           <img src="img/founder.jpg" alt="">
           <p>By Amiel Stanek <br>
             Photos by Alex Lau
